--- a/index.html
+++ b/index.html
@@ -1,7 +1,72 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Technical Documentation Page</title>
+    <link href="harrystyles.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <main id="main-doc">
+      <div class="bar-container">
+      <nav id="navbar">
+        <header>Productions</header>
+        <ul>
+          <li><a class="nav-link" href="#Great_Comet">Great Comet</a></li>
+          <li><a class="nav-link" href="#Julius_Caesar">Julius Caesar</a></li>
+          <li><a class="nav-link" href="#Of_Thee_I_Sing">Of Thee I Sing</a></li>
+          <li><a class="nav-link" href="#Elizabeth_Cree">Elizabeth Cree</a></li>
+          <li><a class="nav-link" href="#Pippin_HLT">Pippin HLT</a></li>
+        </ul> 
+      </nav>
+      </div>
+      <section class="main-section" id="Great_Comet">
+        <header>
+          Great Comet
+        </header>
+        <p class="show-type">Upcoming show - Musical</p>
+        <p class="where-when">Power Center Winter 2026</p>
+        <code>5 + 5 = 10</code>
+        <ul><li>PSM</li></ul>
+      </section>
+      <section class="main-section" id="Julius_Caesar">
+        <header>
+          Julius Caesar
+        </header>
+        <p class="show-type">Play</p>
+        <p class="where-when">AMT Fall 2024</p>
+        <code>short</code>
+        <ul><li>PSM</li></ul>
+      </section>
+      <section class="main-section" id="Of_Thee_I_Sing">
+        <header>
+          Of Thee I Sing
+        </header>
+        <p class="show-type">Workshop Musical</p>
+        <p class="where-when">Michigan Theater Fall 2024</p>
+        <code>lala</code>
+       <ul><li>SM</li></ul>
+      </section>
+      <section class="main-section" id="Elizabeth_Cree">
+        <header>
+          Elizabeth Cree
+        </header>
+        <p class="show-type">Opera</p>
+        <p class="where-when">Mendelsshon Winter 2024</p>
+        <code>Woo opera</code>
+        <ul><li>ASM</li></ul>
+      </section>
+      <section class="main-section" id="Pippin_HLT">
+        <header>
+          Pippin HLT
+        </header>
+        <p class="show-type">New Work Musical</p>
+        <p class="where-when">AMT Winter 2024</p>
+        <code>woof</code>
+        <ul><li>ASM</li></ul>
+      </section>
+    </main>
+  
+  </body>
 </html>
+
