Importing website design

--- a/index.html
+++ b/index.html
@@ -1,72 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <title>Technical Documentation Page</title>
-    <link href="harrystyles.css" rel="stylesheet">
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Andy Blatt website" />
+    <title>Andy Blatt Website and Portfolio</title>
+    <link rel="stylesheet" href="harrystyles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+</head>
 
-  <body>
-    <main id="main-doc">
-      <div class="bar-container">
-      <nav id="navbar">
-        <header>Productions</header>
-        <ul>
-          <li><a class="nav-link" href="#Great_Comet">Great Comet</a></li>
-          <li><a class="nav-link" href="#Julius_Caesar">Julius Caesar</a></li>
-          <li><a class="nav-link" href="#Of_Thee_I_Sing">Of Thee I Sing</a></li>
-          <li><a class="nav-link" href="#Elizabeth_Cree">Elizabeth Cree</a></li>
-          <li><a class="nav-link" href="#Pippin_HLT">Pippin HLT</a></li>
-        </ul> 
-      </nav>
-      </div>
-      <section class="main-section" id="Great_Comet">
-        <header>
-          Great Comet
-        </header>
-        <p class="show-type">Upcoming show - Musical</p>
-        <p class="where-when">Power Center Winter 2026</p>
-        <code>5 + 5 = 10</code>
-        <ul><li>PSM</li></ul>
-      </section>
-      <section class="main-section" id="Julius_Caesar">
-        <header>
-          Julius Caesar
-        </header>
-        <p class="show-type">Play</p>
-        <p class="where-when">AMT Fall 2024</p>
-        <code>short</code>
-        <ul><li>PSM</li></ul>
-      </section>
-      <section class="main-section" id="Of_Thee_I_Sing">
-        <header>
-          Of Thee I Sing
-        </header>
-        <p class="show-type">Workshop Musical</p>
-        <p class="where-when">Michigan Theater Fall 2024</p>
-        <code>lala</code>
-       <ul><li>SM</li></ul>
-      </section>
-      <section class="main-section" id="Elizabeth_Cree">
-        <header>
-          Elizabeth Cree
-        </header>
-        <p class="show-type">Opera</p>
-        <p class="where-when">Mendelsshon Winter 2024</p>
-        <code>Woo opera</code>
-        <ul><li>ASM</li></ul>
-      </section>
-      <section class="main-section" id="Pippin_HLT">
-        <header>
-          Pippin HLT
-        </header>
-        <p class="show-type">New Work Musical</p>
-        <p class="where-when">AMT Winter 2024</p>
-        <code>woof</code>
-        <ul><li>ASM</li></ul>
-      </section>
-    </main>
+<body>
+    <header>
+        <a class="logo" href="#homepage">
+            <h1 class="logohead">Andy Blatt</h1>
+            <h2 class="logosub">Theater Technician</h2>
+        </a>
+        
+        <nav>
+            <ul>
+                <li><a href="#homepage">Home</a></li>
+                <li><a href="#all-productions">Productions</a></li>
+                <li><a href="#all-projects">Projects</a></li>
+                <li><a href="#full-resume">Resume</a></li>
+                <li><a href="#contact-sheet">Contact</a></li>
+            </ul>
+        </nav>
+    </header>    
+    
   
-  </body>
-</html>
+    <body id="homepage" class="homepage">
+        <div class="pic">
+            <img id="pfp" src="https://andyblatt.weebly.com/uploads/1/5/1/9/151925521/andy-blatt-headshot_orig.jpg"/>
+        </div>
+        <div id="bio">
+            <h2>Meet Andy!</h2>
 
+            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
+                Through a combination of traditional learning and hands-on production experience, he is passionate about
+                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
+                primary focus in stage management.</p>
+
+            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
+                his feet. He believes knowing a little about everything aids in a smoother production experience for all
+                involved.</p>
+
+            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
+
+            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
+                eager to continue growing as a person and theater artist through the rest of his life.</p>
+        </div>
+    </body>
+
+    <body id="all-productions" class="all-productions">
+        <h2>Productions</h2>
+        <div id="bio">
+            <h2>Meet Andy!</h2>
+
+            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
+                Through a combination of traditional learning and hands-on production experience, he is passionate about
+                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
+                primary focus in stage management.</p>
+
+            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
+                his feet. He believes knowing a little about everything aids in a smoother production experience for all
+                involved.</p>
+
+            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
+
+            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
+                eager to continue growing as a person and theater artist through the rest of his life.</p>
+        </div>
+    </body>
+
+    <body id="all-projects" class="all-projects">
+        <h2>Projects (Coursework)</h2>
+    </body>
+
+    <body id="full-resume" class="full-resume">
+        <h2>Resume</h2>
+    </body>
+    <footer>
+        <a href="www.linkedin.com/in/andy-blatt-4b8952263">LinkedIn</a>
+    </footer>
+</body>
+
+</html>
