side by side, working header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>    
     
   
-    <body id="homepage" class="homepage">
+    <section id="homepage" class="homepage">
         <div class="pic">
             <img id="pfp" src="https://andyblatt.weebly.com/uploads/1/5/1/9/151925521/andy-blatt-headshot_orig.jpg"/>
         </div>
@@ -52,9 +52,9 @@
             <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
                 eager to continue growing as a person and theater artist through the rest of his life.</p>
         </div>
-    </body>
+    </section>
 
-    <body id="all-productions" class="all-productions">
+    <section id="all-productions" class="all-productions">
         <h2>Productions</h2>
         <div id="bio">
             <h2>Meet Andy!</h2>
@@ -73,15 +73,15 @@
             <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
                 eager to continue growing as a person and theater artist through the rest of his life.</p>
         </div>
-    </body>
+    </section>
 
-    <body id="all-projects" class="all-projects">
+    <section id="all-projects" class="all-projects">
         <h2>Projects (Coursework)</h2>
-    </body>
+    </section>
 
-    <body id="full-resume" class="full-resume">
+    <section id="full-resume" class="full-resume">
         <h2>Resume</h2>
-    </body>
+    </section>
     <footer>
         <a href="www.linkedin.com/in/andy-blatt-4b8952263">LinkedIn</a>
     </footer>
