--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <header>
         <a class="logo" href="#homepage">
-            <h1 class="logohead">Andy Blatt</h1>
-            <h2 class="logosub">Theater Technician</h2>
+            <h1>Andy Blatt</h1>
+            <h2>Theater Technician</h2>
         </a>
         
         <nav>
@@ -77,10 +77,44 @@
 
     <section id="all-projects" class="all-projects">
         <h2>Projects (Coursework)</h2>
+        <div id="bio">
+            <h2>Meet Andy!</h2>
+
+            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
+                Through a combination of traditional learning and hands-on production experience, he is passionate about
+                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
+                primary focus in stage management.</p>
+
+            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
+                his feet. He believes knowing a little about everything aids in a smoother production experience for all
+                involved.</p>
+
+            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
+
+            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
+                eager to continue growing as a person and theater artist through the rest of his life.</p>
+        </div>
     </section>
 
     <section id="full-resume" class="full-resume">
         <h2>Resume</h2>
+        <div id="bio">
+            <h2>Meet Andy!</h2>
+
+            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
+                Through a combination of traditional learning and hands-on production experience, he is passionate about
+                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
+                primary focus in stage management.</p>
+
+            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
+                his feet. He believes knowing a little about everything aids in a smoother production experience for all
+                involved.</p>
+
+            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
+
+            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
+                eager to continue growing as a person and theater artist through the rest of his life.</p>
+        </div>
     </section>
     <footer>
         <a href="www.linkedin.com/in/andy-blatt-4b8952263">LinkedIn</a>
