--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         
         <nav>
             <ul>
-                <li><a href="#homepage">Home</a></li>
-                <li><a href="#all-productions">Productions</a></li>
-                <li><a href="#all-projects">Projects</a></li>
-                <li><a href="#full-resume">Resume</a></li>
-                <li><a href="#contact-sheet">Contact</a></li>
+                <li><a href="#homepage" class="navigate">Home</a></li>
+                <li><a href="#all-productions" class="navigate">Productions</a></li>
+                <li><a href="#all-projects" class="navigate">Projects</a></li>
+                <li><a href="#full-resume" class="navigate">Resume</a></li>
+                <li><a href="#contact-sheet" class="navigate">Contact</a></li>
             </ul>
         </nav>
     </header>    
     
   
     <section id="homepage" class="homepage">
-        <div class="pic">
+        <div>
             <img id="pfp" src="https://andyblatt.weebly.com/uploads/1/5/1/9/151925521/andy-blatt-headshot_orig.jpg"/>
         </div>
         <div id="bio">
@@ -56,7 +56,7 @@
 
     <section id="all-productions" class="all-productions">
         <h2>Productions</h2>
-        <div id="bio">
+        <div>
             <h2>Meet Andy!</h2>
 
             <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
@@ -77,7 +77,7 @@
 
     <section id="all-projects" class="all-projects">
         <h2>Projects (Coursework)</h2>
-        <div id="bio">
+        <div>
             <h2>Meet Andy!</h2>
 
             <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
@@ -98,7 +98,7 @@
 
     <section id="full-resume" class="full-resume">
         <h2>Resume</h2>
-        <div id="bio">
+        <div>
             <h2>Meet Andy!</h2>
 
             <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
@@ -116,8 +116,9 @@
                 eager to continue growing as a person and theater artist through the rest of his life.</p>
         </div>
     </section>
+
     <footer>
-        <a href="www.linkedin.com/in/andy-blatt-4b8952263">LinkedIn</a>
+        <a href="www.linkedin.com/in/andy-blatt-4b8952263" class="navigate">LinkedIn</a>
     </footer>
 </body>
 
