--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 <body>
     <header>
-        <a class="logo" href="#homepage">
+        <a class="logo" href="/index.html">
             <h1>Andy Blatt</h1>
             <h2>Theater Technician</h2>
         </a>
         
         <nav>
             <ul>
-                <li><a href="#homepage" class="navigate">Home</a></li>
-                <li><a href="#all-productions" class="navigate">Productions</a></li>
+                <li><a href="/index.html" class="navigate">Home</a></li>
+                <li><a href="/productions.html" class="navigate">Productions</a></li>
                 <li><a href="#all-projects" class="navigate">Projects</a></li>
                 <li><a href="#full-resume" class="navigate">Resume</a></li>
                 <li><a href="#contact-sheet" class="navigate">Contact</a></li>
