Pages for each thing!

--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,10 @@
         </nav>
     </header>    
     
-  
-    <section id="homepage" class="homepage">
+
+    <section id="contact-form" class="contact-form">
+        <h2>Contact Info!!</h2>
         <div>
-            <img id="pfp" src="https://andyblatt.weebly.com/uploads/1/5/1/9/151925521/andy-blatt-headshot_orig.jpg"/>
-        </div>
-        <div id="bio">
             <h2>Meet Andy!</h2>
 
             <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
