--- a/productions.html
+++ b/productions.html
@@ -23,9 +23,9 @@
             <ul>
                 <li><a href="/index.html" class="navigate">Home</a></li>
                 <li><a href="/productions.html" class="navigate">Productions</a></li>
-                <li><a href="#all-projects" class="navigate">Projects</a></li>
-                <li><a href="#full-resume" class="navigate">Resume</a></li>
-                <li><a href="#contact-sheet" class="navigate">Contact</a></li>
+                <li><a href="/projects.html" class="navigate">Projects</a></li>
+                <li><a href="/ABResume.pdf" class="navigate">Resume</a></li>
+                <li><a href="/contact.html" class="navigate">Contact</a></li>
             </ul>
         </nav>
     </header>    
