Updated page spacing

--- a/productions.html
+++ b/productions.html
@@ -56,7 +56,8 @@
     </section>
 
     <footer>
-        <a href="www.linkedin.com/in/andy-blatt-4b8952263" class="navigate">LinkedIn</a>
+        <a href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank" class="navigate">LinkedIn</a>
+        <a href="mailto:andyfelix564@gmail.com" target="_blank" class="navigate">Email</a>
     </footer>
 </body>
 
