Updating Productions page
Figuring out how to add images
Made resume open in a new tab
Made headshot bigger on home screen
Added a base form for contact

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         
         <nav>
             <ul>
-                <li><a href="/index.html" class="navigate">Home</a></li>
-                <li><a href="/productions.html" class="navigate">Productions</a></li>
-                <li><a href="/projects.html" class="navigate">Projects</a></li>
-                <li><a href="/ABResume.pdf" class="navigate">Resume</a></li>
-                <li><a href="/contact.html" class="navigate">Contact</a></li>
+                <li><a class="navigate" href="/index.html">Home</a></li>
+                <li><a class="navigate" href="/productions.html">Productions</a></li>
+                <li><a class="navigate" href="/projects.html">Projects</a></li>
+                <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+                <li><a class="navigate" href="/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>    
@@ -34,7 +34,7 @@
   
     <section id="homepage" class="homepage">
         <div>
-            <img id="pfp" src="https://andyblatt.weebly.com/uploads/1/5/1/9/151925521/andy-blatt-headshot_orig.jpg"/>
+            <img id="pfp" src="images/andyBlattHeadshot.jpg"/>
         </div>
         <div id="bio">
             <h2>Meet Andy!</h2>
@@ -56,8 +56,8 @@
     </section>
 
     <footer>
-        <a href="http://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank" class="navigate">LinkedIn</a>
-        <a href="mailto:andyfelix564@gmail.com" target="_blank" class="navigate">Email</a>
+        <a class="navigate" href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
+        <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
     </footer>
 </body>
 
