--- a/productions.html
+++ b/productions.html
@@ -22,11 +22,11 @@
         
         <nav>
             <ul>
-                <li><a href="/index.html" class="navigate">Home</a></li>
-                <li><a href="/productions.html" class="navigate">Productions</a></li>
-                <li><a href="/projects.html" class="navigate">Projects</a></li>
-                <li><a href="/ABResume.pdf" class="navigate">Resume</a></li>
-                <li><a href="/contact.html" class="navigate">Contact</a></li>
+                <li><a class="navigate" href="/index.html">Home</a></li>
+                <li><a class="navigate" href="/productions.html">Productions</a></li>
+                <li><a class="navigate" href="/projects.html">Projects</a></li>
+                <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+                <li><a class="navigate" href="/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>    
@@ -35,29 +35,43 @@
     
 
     <section id="all-productions" class="all-productions">
-        <h2>Productions</h2>
-        <div>
-            <h2>Meet Andy!</h2>
+        <div class="gallery">
+            <img src="images/caesar/CaesarCompany.JPG"/>
+            <img src="images/caesar/caesar1.jpg"/>
+            <img src="images/caesar/caesar2.jpg"/>
+<!--
+            <img src="images/caesar/caesar3.jpg"/>
+            <img src="images/caesar/caesar4.jpg"/>
+            <img src="images/caesar/caesar5.jpg"/>
+            <img src="images/caesar/caesar6.jpg"/>
+            <img src="images/caesar/caesar7.jpg"/>
+            <img src="images/CaesarCompany.JPG"/>
+-->
+        </div>
 
-            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
-                Through a combination of traditional learning and hands-on production experience, he is passionate about
-                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
-                primary focus in stage management.</p>
+        <div class="about-show">
+            <div class="creative-team">
+                <p><span class="team-position">Director: </span>Priscilla Lindsay</p>
+                <p><span class="team-position">Set Designer: </span>Eli Sherlock</p>
+                <p><span class="team-position">Costume Designer: </span>Ellie Van Engen</p>
+                <p><span class="team-position">Lighting Designer: </span>Christian DeAngelis</p>
+                <p><span class="team-position">Hair & Makeup Designer: </span>Brittany Crinson</p>
+                <p><span class="team-position">Photographer: </span>Peter Smith</p>
+                <p><span class="team-position">Production Stage Manager: </span>Andy Blatt</p>
+            </div>
 
-            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
-                his feet. He believes knowing a little about everything aids in a smoother production experience for all
-                involved.</p>
-
-            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
-
-            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
-                eager to continue growing as a person and theater artist through the rest of his life.</p>
+            <div class="show-details">
+                <p>Written by William Shakespeare</p>
+                <p>Adapted by Priscilla Lindsay</p>
+                <p>University Productions | Arthur Miller Theater</p>
+                <p>October 2024</p>
+            </div>
         </div>
     </section>
 
     <footer>
-        <a href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank" class="navigate">LinkedIn</a>
-        <a href="mailto:andyfelix564@gmail.com" target="_blank" class="navigate">Email</a>
+        <a class="navigate" href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
+        <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
     </footer>
 </body>
 
