--- a/projects.html
+++ b/projects.html
@@ -22,11 +22,11 @@
         
         <nav>
             <ul>
-                <li><a href="/index.html" class="navigate">Home</a></li>
-                <li><a href="/productions.html" class="navigate">Productions</a></li>
-                <li><a href="/projects.html" class="navigate">Projects</a></li>
-                <li><a href="/ABResume.pdf" class="navigate">Resume</a></li>
-                <li><a href="/contact.html" class="navigate">Contact</a></li>
+                <li><a class="navigate" href="/index.html">Home</a></li>
+                <li><a class="navigate" href="/productions.html">Productions</a></li>
+                <li><a class="navigate" href="/projects.html">Projects</a></li>
+                <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+                <li><a class="navigate" href="/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>    
@@ -53,7 +53,8 @@
     </section>
 
     <footer>
-        <a href="www.linkedin.com/in/andy-blatt-4b8952263" class="navigate">LinkedIn</a>
+        <a class="navigate" href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
+        <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
     </footer>
 </body>
 
