--- a/productions.html
+++ b/productions.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Andy Blatt website" />
     <title>Andy Blatt Productions</title>
-    <link rel="icon" type="image/x-icon" href="/mickeyfav.png">
+    <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,6 +63,7 @@
             <div class="show-details">
                 <p>Written by William Shakespeare</p>
                 <p>Adapted by Priscilla Lindsay</p>
+                <div class="empty-block"></div>
                 <p>University Productions | Arthur Miller Theater</p>
                 <p>October 2024</p>
             </div>
