--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,9 @@
     <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
             <h1>Andy Blatt</h1>
             <h2>Theater Technician</h2>
         </a>
-        
+
         <nav>
             <ul>
                 <li><a class="navigate" href="/index.html">Home</a></li>
@@ -29,27 +30,56 @@
                 <li><a class="navigate" href="/contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>    
-    
+    </header>
+
     <section id="all-projects" class="all-projects">
         <h2>Projects (Coursework)</h2>
-        <div>
-            <h2>Meet Andy!</h2>
 
-            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
-                Through a combination of traditional learning and hands-on production experience, he is passionate about
-                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
-                primary focus in stage management.</p>
+        <div class="j-peterman">
+            <h3>J. Peterman Project</h3>
 
-            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
-                his feet. He believes knowing a little about everything aids in a smoother production experience for all
-                involved.</p>
+            <p>In my Costumes 1 Class we were tasked with finding two items of clothing from our wardrobe that
+                represented an example of clothing as protest. We then had to render them in the style of J. Peterman
+                drawings and write a description similar to those on the J. Peterman website. </p>
 
-            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
-
-            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
-                eager to continue growing as a person and theater artist through the rest of his life.</p>
+            <div class="gallery">
+                <img src="images/costumes/peterman-bandana.png" />
+                <img src="images/costumes/peterman-shoe.png" />
+            </div>
         </div>
+
+        <div class="almost-fairy-time">
+            <h3>Almost Fairy Time</h3>
+
+            <p>This play is about four women who are not treated properly by their boss. It feels very relevant because
+                women do not often have many spaces of trust or a community and culture that believe them when they
+                speak out. Therefore, a visual solution will be to set the story in a place where women create their own
+                safe space away from their boss - at an American Apparel store in California.</p>
+
+            <div class="gallery">
+                <img src="images/costumes/aft-mood-board.jpg" />
+                <img src="images/costumes/aft-renderings-1.jpg" />
+                <img src="images/costumes/aft-renderings-2.jpg" />
+                <img src="images/costumes/aft-renderings-3.jpg" />
+                <img src="images/costumes/aft-renderings-4.jpg" />
+            </div>
+        </div>
+
+        <div class="museum-inspo">
+            <h3>Museum Inspiration Project</h3>
+
+            <p>In my Costumes 1 class, we went to a museum and were tasked with taking pictures of things that we found
+                interesting, taking note of any repeated patterns we found in nature. I was very interested in the
+                dots/lines pattern that was on the starfish, and how that also looked like neurons on the microscopic
+                scale. I used this pattern as my inspiration for my rendering. </p>
+
+            <div class="gallery">
+                <img src="images/costumes/mi-final.jpg" />
+                <img src="images/costumes/mi-research.jpg" />
+                <img src="images/costumes/mi-thumbnails.jpg" />
+            </div>
+        </div>
+
     </section>
 
     <footer>
