--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
                 <button id="submit" type="submit">Submit Here</button>
             </form>      
         </div>
+    </section>
     <footer>
         <a class="navigate" href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
         <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
