--- a/resume.html
+++ b/resume.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Andy Blatt website" />
-    <title>Andy Blatt Resume</title>
-    <link rel="icon" type="image/x-icon" href="/mickeyfav.png">
+    <title>Andy Blatt Contact Form</title>
+    <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,104 +22,24 @@
         
         <nav>
             <ul>
-                <li><a href="/index.html" class="navigate">Home</a></li>
-                <li><a href="/productions.html" class="navigate">Productions</a></li>
-                <li><a href="/projects.html" class="navigate">Projects</a></li>
-                <li><a href="/ABResume.pdf" class="navigate">Resume</a></li>
-                <li><a href="/contact.html" class="navigate">Contact</a></li>
+                <li><a class="navigate" href="/index.html">Home</a></li>
+                <li><a class="navigate" href="/productions.html">Productions</a></li>
+                <li><a class="navigate" href="/projects.html">Projects</a></li>
+                <li><a class="navigate" href="/ABResume.pdf" target="_blank">Resume</a></li>
+                <li><a class="navigate" href="/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>    
     
-  
-    <section id="homepage" class="homepage">
-        <div>
-            <img id="pfp" src="https://andyblatt.weebly.com/uploads/1/5/1/9/151925521/andy-blatt-headshot_orig.jpg"/>
-        </div>
-        <div id="bio">
-            <h2>Meet Andy!</h2>
 
-            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
-                Through a combination of traditional learning and hands-on production experience, he is passionate about
-                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
-                primary focus in stage management.</p>
+    <section id="resume" class="resume">
 
-            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
-                his feet. He believes knowing a little about everything aids in a smoother production experience for all
-                involved.</p>
+        <embed href="/ABResume.pdf" type="application/pdf" title="Embedded PDF Viewer" class="resume-view" />
 
-            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
-
-            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
-                eager to continue growing as a person and theater artist through the rest of his life.</p>
-        </div>
     </section>
-
-    <section id="all-productions" class="all-productions">
-        <h2>Productions</h2>
-        <div>
-            <h2>Meet Andy!</h2>
-
-            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
-                Through a combination of traditional learning and hands-on production experience, he is passionate about
-                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
-                primary focus in stage management.</p>
-
-            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
-                his feet. He believes knowing a little about everything aids in a smoother production experience for all
-                involved.</p>
-
-            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
-
-            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
-                eager to continue growing as a person and theater artist through the rest of his life.</p>
-        </div>
-    </section>
-
-    <section id="all-projects" class="all-projects">
-        <h2>Projects (Coursework)</h2>
-        <div>
-            <h2>Meet Andy!</h2>
-
-            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
-                Through a combination of traditional learning and hands-on production experience, he is passionate about
-                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
-                primary focus in stage management.</p>
-
-            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
-                his feet. He believes knowing a little about everything aids in a smoother production experience for all
-                involved.</p>
-
-            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
-
-            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
-                eager to continue growing as a person and theater artist through the rest of his life.</p>
-        </div>
-    </section>
-
-    <section id="full-resume" class="full-resume">
-        <h2>Resume</h2>
-        <div>
-            <h2>Meet Andy!</h2>
-
-            <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
-                Through a combination of traditional learning and hands-on production experience, he is passionate about
-                learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
-                primary focus in stage management.</p>
-
-            <p>With his varied experiences and backgrounds, Andy can easily adapt to new situations and quickly learn on
-                his feet. He believes knowing a little about everything aids in a smoother production experience for all
-                involved.</p>
-
-            <p>Currently, Andy is working as the Sound Script intern at The Muny in St. Louis, Missouri!</p>
-
-            <p>As a person who is always excited to learn the next thing, Andy is open to all new opportunities and is
-                eager to continue growing as a person and theater artist through the rest of his life.</p>
-        </div>
-    </section>
-
     <footer>
-        <a href="www.linkedin.com/in/andy-blatt-4b8952263" class="navigate">LinkedIn</a>
+        <a class="navigate" href="www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
+        <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
     </footer>
 </body>
 
