--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,8 @@
     </header>
 
     <section id="all-projects" class="all-projects">
-        <h2>Projects (Coursework)</h2>
+
+        <h2 class="headliner">Costumes</h2>
 
         <div class="j-peterman">
             <h3>J. Peterman Project</h3>
@@ -42,9 +43,21 @@
                 represented an example of clothing as protest. We then had to render them in the style of J. Peterman
                 drawings and write a description similar to those on the J. Peterman website. </p>
 
-            <div class="gallery">
-                <img src="images/costumes/peterman-bandana.png" />
-                <img src="images/costumes/peterman-shoe.png" />
+
+            <div class="grid-total">
+                <div class="grid-packet">
+                    <img src="images/costumes/peterman-shoe.png" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">J. Peterman Shoe</div>
+                    </div>
+                </div>
+
+                <div class="grid-packet">
+                    <img src="images/costumes/peterman-bandana.png" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">J. Peterman Bandana</div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -56,13 +69,39 @@
                 speak out. Therefore, a visual solution will be to set the story in a place where women create their own
                 safe space away from their boss - at an American Apparel store in California.</p>
 
-            <div class="gallery">
-                <img src="images/costumes/aft-mood-board.jpg" />
-                <img src="images/costumes/aft-renderings-1.jpg" />
-                <img src="images/costumes/aft-renderings-2.jpg" />
-                <img src="images/costumes/aft-renderings-3.jpg" />
-                <img src="images/costumes/aft-renderings-4.jpg" />
+            <div class="grid-total">
+                <div class="grid-packet">
+                    <img src="images/costumes/aft-mood-board.jpg" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">Mood Board</div>
+                    </div>
+                </div>
+                <div class="grid-packet">
+                    <img src="images/costumes/aft-renderings-1.jpg" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">Introducing Mab</div>
+                    </div>
+                </div>
+                <div class="grid-packet">
+                    <img src="images/costumes/aft-renderings-2.jpg" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">Introducing Ariel</div>
+                    </div>
+                </div>
+                <div class="grid-packet">
+                    <img src="images/costumes/aft-renderings-3.jpg" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">Introducing Moth</div>
+                    </div>
+                </div>
+                <div class="grid-packet">
+                    <img src="images/costumes/aft-renderings-4.jpg" class="grid-img">
+                    <div class="overlay">
+                        <div class="grid-text">Introducing Caliban</div>
+                    </div>
+                </div>
             </div>
+
         </div>
 
         <div class="museum-inspo">
@@ -73,10 +112,78 @@
                 dots/lines pattern that was on the starfish, and how that also looked like neurons on the microscopic
                 scale. I used this pattern as my inspiration for my rendering. </p>
 
+            <div class="grid-packet">
+                <img src="images/costumes/mi-final.jpg" class="grid-img">
+                <div class="overlay">
+                    <div class="grid-text">Final Rendering</div>
+                </div>
+            </div>
+            <div class="grid-packet">
+                <img src="images/costumes/mi-thumbnails.jpg" class="grid-img">
+                <div class="overlay">
+                    <div class="grid-text">Thumbnail Sketches</div>
+                </div>
+            </div>
+            <div class="grid-packet">
+                <img src="images/costumes/mi-research.jpg" class="grid-img">
+                <div class="overlay">
+                    <div class="grid-text">Research Imagery</div>
+                </div>
+            </div>
+            
+
+        </div>
+
+        <h2 class="headliner">Tailoring</h2>
+
+        <div class="suit-jacket">
+            <h3>Half-Scale Suit Jacket</h3>
+
             <div class="gallery">
-                <img src="images/costumes/mi-final.jpg" />
-                <img src="images/costumes/mi-research.jpg" />
-                <img src="images/costumes/mi-thumbnails.jpg" />
+                <img src="images/tailoring/jacket-front.jpg" />
+                <img src="images/tailoring/jacket-back.jpg" />
+                <img src="images/tailoring/jacket-sans-sleeves.jpg" />
+                <img src="images/tailoring/jacket-lapels.jpg" />
+            </div>
+        </div>
+
+        <div class="suit-collar">
+            <h3>Collar Dickie</h3>
+
+            <div class="gallery">
+                <img src="images/tailoring/collar-front.jpg" />
+                <img src="images/tailoring/collar-back.jpg" />
+                <img src="images/tailoring/collar-in-progress.jpg" />
+                <img src="images/tailoring/collar-in-progress.jpg" />
+            </div>
+        </div>
+
+        <div class="pockets">
+            <h3>Upper Welt and Jetted Pockets</h3>
+
+            <div class="gallery">
+                <img src="images/tailoring/jetted-pocket-front.jpg" />
+                <img src="images/tailoring/jetted-pocket-back.jpg" />
+                <img src="images/tailoring/upper-welt-front.jpg" />
+                <img src="images/tailoring/upper-welt-back.jpg" />
+            </div>
+        </div>
+
+        <h2 class="headliner">Scenic Paint</h2>
+
+        <div class="final">
+            <h3>Scenic Paint Final</h3>
+
+            <div class="gallery">
+                <img src="images/scenic-paint/" />
+            </div>
+        </div>
+
+        <div class="brick-stone">
+            <h3>Scenic Paint Final</h3>
+
+            <div class="gallery">
+                <img src="images/scenic-paint/" />
             </div>
         </div>
 
